add productcard, container, grid, hero, marquee

--- a/components/ui/Grid/Grid.module.css
+++ b/components/ui/Grid/Grid.module.css
@@ -29,5 +29,10 @@
 }
 
 .layoutB {
-  color: purple;
+  & > *:nth-child(6n + 2),
+  & > *:nth-child(6n + 4) {
+    @screen lg {
+      @apply col-span-2 row-span-3;
+    }
+  }
 }
